--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="bc" id="space1">
         <main>
             <div class="maincontent">
-                <img id="banner" src="illustration-article.svg" alt="banner">
+                <img id="banner" src="./illustration-article.svg" alt="banner">
                     <h5 id="tag" style="background-color: hsl(47, 88%, 63%);width: fit-content;">Learning</h5>
                 <h5>published 25th july 2025</h5>
                 <h2>HTML & CSS foundation</h2>
                 <p>These languages are the backbone of every website,defigning structure,content,and prsantation</p>
-                <img src="image-avatar.webp" alt="pfp" id="pfp">
+                <img src="./image-avatar.webp" alt="pfp" id="pfp">
                 <h3 id="name">Greg Hooper</h3>
             </div>
         </main>
